<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/menu_user_type">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/menu_normal"
                    android:checked="true"
                    android:title="@string/menu_normal" />
                <item
                    android:id="@+id/menu_super"
                    android:title="@string/menu_super" />
            </group>
        </menu>
    </item>

    <item android:title="@string/menu_environment">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/menu_mock"
                    android:checked="true"
                    android:title="@string/menu_mock" />
                <item
                    android:id="@+id/menu_release"
                    android:title="@string/menu_release" />
                <item
                    android:id="@+id/menu_custom"
                    android:title="@string/menu_custom" />
            </group>
        </menu>
    </item>
</menu>